tests/cases/ok/returns_and_typed_args.p4
def add_one(x: int) -> int:
    return x + 1

def main() -> None:
    print(add_one(4))
