tests/cases/fail/nested_native_function.p4
def main() -> None:
    native def helper(x: int) -> int
